# OctoCore

./: .gitignore  CMakeLists.txt  README.md  main.cpp  socket_test.py  socket_test_tcp.py  socket_test_udp.py
scripts/: socket_test_udp.py  test.py
src/: octocomm.cpp  octocomm.h  octocomm_message.cpp  octocomm_message.h
src/windows/: octocomm_win.cpp  octocomm_win.h  tcp_socket.hpp  udp_socket.hpp  win_sockets.h
